--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Optional: For additional features
-VITE_OPENAI_API_KEY=your_openai_api_key_for_ai_features
+# Service Role Key (only for backend/seed operations)
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
