--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Dependencies
 /node_modules
+mcp-server/node_modules/
+/.pnp
+.pnp.js
 
 # Build artifacts
 /dist
@@ -13,10 +16,49 @@
 .env
 .env.*
 !.env.example
+.env*.local
 
 # IDE and OS files
 .DS_Store
 .vscode/
 .idea/
 .vercel
-.env*.local
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+
+# Test files (removed from repo)
+*-test.html
+test-*.html
+*-test.js
+test-*.js
+*-test.sql
+test-*.sql
+create-*.sql
+fix-*.js
+inject-*.html
+copy-*.html
+set-*.html
+simple-*.html
+direct-*.html
+
+# MCP Server (if not needed in repo)
+mcp-server/
+
+# Supabase
+supabase/.branches
+supabase/.temp
